--- a/configs/unet/stage2.yaml
+++ b/configs/unet/stage2.yaml
@@ -6,20 +6,20 @@ data:
   audio_embeds_cache_dir: /mnt/bn/maliva-gen-ai-v2/chunyu.li/audio_cache/whisper_new
   audio_mel_cache_dir: /mnt/bn/maliva-gen-ai-v2/chunyu.li/audio_cache/mel_new
 
-  val_video_path: assets/demo1_video.mp4
-  val_audio_path: assets/demo1_audio.wav
+  val_video_path: assets/demo2_video.mp4
+  val_audio_path: assets/demo2_audio.wav
   batch_size: 1 # 4
   num_workers: 12 # 12
   num_frames: 16
   resolution: 256
   mask: fix_mask
-  mask_image_path: latentsync/utils/mask.png
+  mask_image_path: /home/ubuntu/LatentSync/latentsync/utils/mask.png
   audio_sample_rate: 16000
   video_fps: 25
   audio_feat_length: [2, 2]
 
 ckpt:
-  resume_ckpt_path: checkpoints/latentsync_unet.pt
+  resume_ckpt_path: /home/ubuntu/LatentSync/checkpoints/latentsync_unet.pt
   save_ckpt_steps: 10000
 
 run:
